# ai231

./: .gitignore  main.py  pyproject.toml  requirements.rocm.txt  test.ipynb
exercises/: einops.ipynb  einsum.ipynb
lecture_notes/toolkit/demo/: einops_demo.ipynb
machine_exercises/: first.ipynb  fourth.ipynb  fourth_experimental.ipynb  resnet18_cifar10_headonly_depthprune.ipynb  resnet18_cifar10_headonly_depthprune.ipynb:Zone.Identifier  resnet18_cifar10_headonly_depthprune_lightning_layerdrop.ipynb:Zone.Identifier  second.ipynb  second_experiment.ipynb  test.ipynb  third.ipynb  third_experimental.ipynb
machine_exercises/.gradio/flagged/: dataset1.csv
runs/detect/train/: args.yaml  results.csv
runs/detect/train/weights/: test.py
