[project]
name = "ai231"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy>=13.6.0",
    "einops>=0.8.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
