[project]
name = "ai231"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "fastrtc>=0.0.33",
    "gradio>=5.49.0",
    "gradio-webrtc>=0.0.31",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.2",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "ultralytics",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
